infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: ingress-srv
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
 rules:
  - host: ticketing.dev   
    http:
      paths:
       - path: /api/users/?(.*)
         backend: 
           serviceName: auth-srv
           servicePort: 4000
       - path: /api/tickets/?(.*)
         backend:
           serviceName: tickets-srv
           servicePort: 5000
       - path: /?(.*)
         backend:
           serviceName: client-srv
           servicePort: 3000 
      #  - path: /?(.*)
      #    backend:
      #      serviceName: client-srv
      #      servicePort: 3000
